# genesis-2.4

./: README.md
genesis/src/: CHANGES  Makefile.BASE  Makefile.Cygwin  Makefile.Darwin  Makefile.FreeBSD  Makefile.Linux  Makefile.LinuxPPC  Makefile.Solaris  Makefile.aix  Makefile.decalpha  Makefile.dist  Makefile.gamma  Makefile.hpux  Makefile.in  Makefile.irix  Makefile.mips  Makefile.other  Makefile.sun3  Makefile.sun4  Makefile.xt3  README-GC.txt  README-compile.txt  README.OSX  README.cygwin  README.html  README.txt  configure  configure.ac  excludeFromBinary  excludeFromSrc  libsh
genesis/src/Xodus/: Makefile
genesis/src/buffer/: Makefile  buf.h  buf_defs.h  buf_ext.h  buf_struct.h  buflib.g  graded.c  linear.c  pc_input.c  periodic.c  playback.c  randombuf.c  sigmoid.c  spike.c  statebuf.c
genesis/src/chemesis/: Makefile  chem_ext.h  chem_struct.h  chemlib.g  cicr.c  cicrflux.c  conservepool.c  diffusion.c  enzyme.c  feedback.c  mmenz.c  mmpump2.c  ncx.c  reaction.c  rhodopsin.c  rxnpool.c  wgtavg.c
genesis/src/concen/: COPYRIGHT  Makefile  conc_defs.h  conc_ext.h  conc_struct.h  conclib.g  concpool.c  dif2buffer.c  difbuffer.c  difshell.c  fixbuffer.c  fura2.c  hillpump.c  mmpump.c  taupump.c
genesis/src/contrib/: README
genesis/src/convert/: Makefile  convert.c  convert.man  convert.txt  mapcommand.c  output.c  output.h  parse.h  result.h  script.l  script.y  strsave.c  symtab.c  symtab.h
genesis/src/device/: Makefile  acxc.c  calculator.c  dev_ext.h  dev_struct.h  devlib.g  diffamp.c  efield.c  efield2.c  efield_cells.c  event_tofile.c  frequency.c  (+11 more)
(+2054 files in other folders)
